--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -2,6 +2,11 @@
   "name": "frontend_react",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Ivanna Polishchuk",
+    "email": "ivvvpol@gmail.com",
+    "url": ""
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
